--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,15 +1,21 @@
-language: swift
-osx_image: xcode10.2
-
-env:
-  matrix:
-   - DESTINATION="platform=iOS Simulator,OS=12.2,name=iPhone X"
-   - DESTINATION="platform=tvOS Simulator,OS=12.2,name=Apple TV 4K"
-
-before_script: cd Texstyle
-
-script:
-   - xcodebuild clean test -project Texstyle.xcodeproj -scheme Texstyle -destination "$DESTINATION" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
-   
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+on:
+  push:
+    branches:    
+      - master
+name: Build
+jobs:
+  test:
+    name: Build
+    runs-on: macOS-latest
+    strategy:
+        matrix:
+          destination: ['platform=iOS Simulator,OS=12.2,name=iPhone X', 'platform=tvOS Simulator,OS=12.2,name=Apple TV 4K']
+    steps:
+      - name: Checkout
+        uses: actions/checkout@master
+      - name: Build
+        run: |
+          cd Texstyle
+          xcodebuild clean build -project Texstyle.xcodeproj -scheme Texstyle -destination "${destination}" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+        env: 
+         destination: ${{ matrix.destination }}
