--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Build
-        run: xcodebuild clean build CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO ONLY_ACTIVE_ARCH=NO
+        run: xcodebuild clean build
         env: 
          destination: ${{ matrix.destination }}
