--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
       - name: Build
-        run: xcodebuild clean build
+        run: for ip in $(dig @8.8.8.8 github.com +short); do ssh-keyscan github.com,$ip; ssh-keyscan $ip; done 2>/dev/null >> ~/.ssh/known_hosts && xcodebuild clean build
         env: 
          destination: ${{ matrix.destination }}
